# expl_drift

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  __init__.py  pyproject.toml
docs/: ALGORITHMS.md
docs/diagrams/: README.md
docs/diagrams/alert_state_machine/: README.md  diagram.mmd
docs/diagrams/architecture_pipeline/: README.md  diagram.mmd
docs/diagrams/class_conditional_flow/: README.md  diagram.mmd
drift/: __init__.py  detector.py  metrics.py
explanations/: __init__.py  ig_explainer.py  lime_explainer.py  shap_explainer.py
monitoring/: __init__.py  alert_level.py  algorithms.py  class_conditional.py  drift_monitor.py
tests/: __init__.py  test_alerting.py  test_metrics.py
