[project]
name = "expl_drift"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "numpy==2.3.5",
  "pandas==3.0.1",
  "scipy==1.17.0",
  "scikit-learn==1.8.0",
  "shap==0.50.0",
  "lime==0.2.0.1",
  "captum==0.7.0",
  "torch==2.10.0",
  "xgboost==2.1.4",
  "pytest==9.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.12.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "docs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
